--- a/client/src/components/Signature/Signature.css
+++ b/client/src/components/Signature/Signature.css
@@ -3,6 +3,6 @@
     width: 200px;
     background-color: blueviolet;
     position: absolute;
-    right: 0;
-    bottom: 0; 
+    right: 5%;
+    bottom: 5%; 
 }
