--- a/client/src/components/SocialCard/SocialCard.css
+++ b/client/src/components/SocialCard/SocialCard.css
@@ -1,4 +1,10 @@
-.social-card {
-    background-color: aqua;
-  
+.middle-writing {
+    position: absolute;
+    top: 45%;
+    bottom: 45%;
+    left: 40%;
+    right: 40%;
+    font-size: 30px; 
+    font-weight: 400;
+
 }
